Update to jdk-14 and later junit-runner jar