@@ -5,8 +5,8 @@ cd ${CYBER_DOJO_SANDBOX}
 
 CLASSES=.:`ls /junit/*.jar | tr '\n' ':'`
 
-if javac -Xlint:unchecked -Xlint:deprecation -cp $CLASSES *.java; then
-  java -jar /junit/junit-platform-console-standalone-1.5.1.jar \
+if javac --enable-preview --release 14 -Xlint:preview -Xlint:unchecked -Xlint:deprecation -cp $CLASSES *.java; then
+  java --enable-preview -jar /junit/junit-platform-console-standalone-1.6.2.jar \
       --disable-banner \
       --disable-ansi-colors \
       --details=tree \
